[package]
name = 'elements'
version = '0.1.0'
edition = '2021'

[dependencies]
bounce = '0.2'
chrono = { version = '0.4', features = ['wasmbind'] }
log = '0.4'
yew = { git = 'https://github.com/yewstack/yew/', features = ['csr'] }
wasm-bindgen = '0.2'
wasm-logger = '0.2'
web-sys = { version = '0.3', features = [
	'DomTokenList',
	'Element',
	'MediaQueryList',
	'Window',
] }

[dev-dependencies]
wasm-bindgen-test = '0.3'
wasm-bindgen-futures = '0.4'
