[package]
name = 'elements'
version = '0.1.0'
edition = '2021'

[dependencies]
bounce = { git = 'https://github.com/futursolo/bounce/' }
chrono = { version = '0.4', features = ['wasmbind'] }
gloo = '0.7'
log = '0.4'
serde = '1'
serde_json = '1'
yew = { git = 'https://github.com/yewstack/yew/', features = ['csr'] }
wasm-bindgen = '0.2'
wasm-logger = '0.2'
web-sys = { version = '0.3', features = [
	'DomTokenList',
	'Element',
	'HtmlVideoElement',
	'MediaQueryList',
	'Window',
] }

[dev-dependencies]
wasm-bindgen-test = '0.3'
wasm-bindgen-futures = '0.4'
